# nebula-tower

./: .env  .env.sample  .gitignore  README.md  TODO.txt  api.py  cert_api.py  create_admin.py  dependencies.py  hosts.py  install_nebula_binaries.sh  lighthouse_router.py  main.py  nebula.db  nebula_api.py  nebula_process_router.py  package-lock.json  pyproject.toml  vars.py
client/: install.sh
client/nebula-tower-menubar-app/: TODO.txt  package-lock.json  package.json  settings.html
client/nebula-tower-menubar-app-fyne/: .gitignore  CONFIG_STATE_README.md  README-FYNE.md  README.md  build.sh  dev.sh  go.mod  icon.go  lighthouse.go  main.go  nebula_binaries.go  settings.go  test_config.sh  types.go
client/nebula-tower-menubar-app-tauri-archived/: index.html  settings.html
client/nebula-tower-menubar-app-tauri-archived/scripts/: install_nebula.sh
client/nebula-tower-menubar-app/icons/: README.txt
client/nebula-tower-menubar-app/src-tauri/: Cargo.toml  tauri.conf.json
client/nebula-tower-menubar-app/src-tauri/src/: main.rs
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.jsx  Cert.jsx  HostDetailsModal.jsx  Hosts.jsx  Invites.jsx  Lighthouse.jsx  Login.jsx  NebulaProcessStatusCard.jsx  Users.jsx  apiConfig.js  index.css  main.jsx
frontend/src/components/: AdminPasswordModal.jsx  GenerateInviteModal.jsx
frontend/src/context/: admin.jsx  adminContext.js
frontend/src/lib/: api.js
routers/: ca_router.py  client_router.py  hosts_router.py  invites_router.py  lighthouse_router.py
(+1 files in other folders)
