[package]
name = "nebula-tower-menubar-app"
version = "0.1.0"
description = "Nebula Tower menubar controller"
authors = ["TransformerLab"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "shell-open", "shell-execute", "path-all", "dialog-message", "system-tray" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
which = "6"
dirs = "5"
# plugins removed for simplicity
parking_lot = "0.12"
reqwest = { version = "0.11", features = [ "rustls-tls", "stream" ] }
zip = "0.6"
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
